--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 <!-- Column Medium -->
   <div class= "column-medium">
+
+    <div class="medium-story">
     <h2>FBI Finds Action Star Guilty of False Advertising</h2>
     <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
       Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt
@@ -68,16 +70,34 @@
       orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna.
       Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus
       dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-
-      <p>Cats in Control-Is It a Thing?</p>
+    </div>
+  <div class="cat">
+      <span>Cats in Control-Is It a Thing?</span>
+    </div>
+    <div class="cat-content">
       <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate,
         ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur
         neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin
         lobortis, dui est sodales sapien, a vestibulum velit diam eget felis.
         Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
       </p>
+    </div>
+  </div>
+
+<!-- Small -->
+
+<div class="column-small">
+  <div class="cookie-img">
+    <img src="./resources/images/cookie.png">
+  </div>
+  <div class="cookie-content">
+    <h2>News Bites</h2>
+    <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas
+      Advertising Internet Online Illustration in Marketing Materials Finally a
+      Top Secret Way You Can</p>
   </div>
 </div>
+
 </div>
   </body>
 </html>
